# aubo_robot

aubo_driver/: CMakeLists.txt  package.xml
aubo_driver/include/aubo_driver/: aubo_driver.h
aubo_driver/src/: aubo_driver.cpp  aubo_driver.h
aubo_driver/test/: set_io  set_joint_position
