<?xml version="1.0"?>
<package format="2">
  <name>aubo_driver</name>
  <version>1.3.1</version>
  <description>The aubo_driver package for connect with the robot controller and moveit controller </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="liug@our-robotics.com">liugang</author>
  <maintainer email="liug@our-robotics.com">liugang</maintainer>
  <url type="website">http://wiki.ros.org/aubo_driver</url>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>aubo_msgs</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
</package>
