<?xml version="1.0"?>
<package format="2">
  <name>aubo_driver</name>
  <version>1.3.1</version>
  <description>The aubo_driver package to talk to the real aubo_robot.</description>

  <author email="rein@ruvu.nl">Rein Appeldoorn</author>
  <maintainer email="rein@ruvu.nl">Rein Appeldoorn</maintainer>

  <url type="website">http://wiki.ros.org/aubo_driver</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>aubo_msgs</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>

  <test_depend>rospy</test_depend>
</package>
